# rag

./: .gitignore  indexing.md  multi_query.md  pyproject.toml  rag_notes.txt  requirements.txt  retrieval.md
production_rag_example/: Readme.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
production_rag_example/qdrant_storage/: raft_state.json
production_rag_example/qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
production_rag_example/qdrant_storage/collections/docs/0/segments/2ec50e5c-4e38-4168-b66e-bd547a8ab98d/: mutable_id_tracker.mappings
rag_example1/: RAPTOR.ipynb  langgraph_crag.ipynb  langgraph_crag_local.ipynb  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb
